deploy/k8s/monitoring-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    # Grafana at monitoring.57.158.128.224.nip.io
    - host: monitoring.57.158.128.224.nip.io
      http:
        paths:
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
    
    # Prometheus at monitoring.57.158.128.224.nip.io/prometheus
    - host: monitoring.57.158.128.224.nip.io
      http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
